# serializer version: 1
# name: TestDjangoPropertiesToQ.test_array_property_as_string_on_persons
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestDjangoPropertiesToQ.test_array_property_as_string_on_persons.1
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestDjangoPropertiesToQ.test_array_property_as_string_on_persons.2
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestDjangoPropertiesToQ.test_array_property_as_string_on_persons.3
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestDjangoPropertiesToQ.test_array_property_as_string_on_persons.4
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestDjangoPropertiesToQ.test_array_property_as_string_on_persons.5
  '''
  SELECT "posthog_person"."id",
         "posthog_person"."created_at",
         "posthog_person"."properties_last_updated_at",
         "posthog_person"."properties_last_operation",
         "posthog_person"."team_id",
         "posthog_person"."properties",
         "posthog_person"."is_user_id",
         "posthog_person"."is_identified",
         "posthog_person"."uuid",
         "posthog_person"."version"
  FROM "posthog_person"
  WHERE (UPPER(("posthog_person"."properties" ->> 'urls')::text) LIKE UPPER('%["abcd"]%')
         AND "posthog_person"."properties" ? 'urls'
         AND NOT (("posthog_person"."properties" -> 'urls') = 'null'::jsonb)
         AND "posthog_person"."team_id" = 2)
  '''
# ---
# name: TestDjangoPropertiesToQ.test_array_property_as_string_on_persons.6
  '''
  SELECT "posthog_persondistinctid"."distinct_id"
  FROM "posthog_persondistinctid"
  WHERE ("posthog_persondistinctid"."person_id" = 2
         AND "posthog_persondistinctid"."team_id" = 2)
  ORDER BY "posthog_persondistinctid"."id" ASC
  '''
# ---
# name: TestDjangoPropertiesToQ.test_icontains_with_array_value
  '''
  SELECT "posthog_person"."uuid"
  FROM "posthog_person"
  WHERE (UPPER(("posthog_person"."properties" ->> '$key')::text) LIKE UPPER('%[''red'']%')
         AND "posthog_person"."properties" ? '$key'
         AND NOT (("posthog_person"."properties" -> '$key') = 'null'::jsonb)
         AND "posthog_person"."team_id" = 2)
  '''
# ---
# name: TestDjangoPropertiesToQ.test_icontains_with_array_value.1
  '''
  SELECT "posthog_person"."uuid"
  FROM "posthog_person"
  WHERE (UPPER(("posthog_person"."properties" ->> '$key')::text) LIKE UPPER('%red%')
         AND "posthog_person"."properties" ? '$key'
         AND NOT (("posthog_person"."properties" -> '$key') = 'null'::jsonb)
         AND "posthog_person"."team_id" = 2)
  '''
# ---
# name: TestDjangoPropertiesToQ.test_person_relative_date_parsing_with_invalid_date
  '''
  SELECT 1 AS "a"
  FROM "posthog_person"
  INNER JOIN "posthog_persondistinctid" ON ("posthog_person"."id" = "posthog_persondistinctid"."person_id")
  WHERE ("posthog_persondistinctid"."distinct_id" = 'example_id'
         AND "posthog_person"."team_id" = 2
         AND ("posthog_person"."properties" -> 'created_at') > '["2m", "3d"]'::jsonb)
  LIMIT 1
  '''
# ---
# name: TestDjangoPropertiesToQ.test_person_relative_date_parsing_with_invalid_date.1
  '''
  SELECT 1 AS "a"
  FROM "posthog_person"
  INNER JOIN "posthog_persondistinctid" ON ("posthog_person"."id" = "posthog_persondistinctid"."person_id")
  WHERE ("posthog_persondistinctid"."distinct_id" = 'example_id'
         AND "posthog_person"."team_id" = 2
         AND ("posthog_person"."properties" -> 'created_at') > '"bazinga"'::jsonb)
  LIMIT 1
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts
  '''
  SELECT "posthog_cohort"."id",
         "posthog_cohort"."name",
         "posthog_cohort"."description",
         "posthog_cohort"."team_id",
         "posthog_cohort"."deleted",
         "posthog_cohort"."filters",
         "posthog_cohort"."query",
         "posthog_cohort"."version",
         "posthog_cohort"."pending_version",
         "posthog_cohort"."count",
         "posthog_cohort"."created_by_id",
         "posthog_cohort"."created_at",
         "posthog_cohort"."is_calculating",
         "posthog_cohort"."last_calculation",
         "posthog_cohort"."errors_calculating",
         "posthog_cohort"."is_static",
         "posthog_cohort"."groups"
  FROM "posthog_cohort"
  WHERE (NOT "posthog_cohort"."deleted"
         AND "posthog_cohort"."id" = 2
         AND "posthog_cohort"."team_id" = 2)
  ORDER BY "posthog_cohort"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts.1
  '''
  SELECT "posthog_person"."id",
         "posthog_person"."created_at",
         "posthog_person"."properties_last_updated_at",
         "posthog_person"."properties_last_operation",
         "posthog_person"."team_id",
         "posthog_person"."properties",
         "posthog_person"."is_user_id",
         "posthog_person"."is_identified",
         "posthog_person"."uuid",
         "posthog_person"."version"
  FROM "posthog_person"
  WHERE (((("posthog_person"."properties" -> 'url') = '"https://whatever.com"'::jsonb
           AND "posthog_person"."properties" ? 'url'
           AND NOT (("posthog_person"."properties" -> 'url') = 'null'::jsonb)
           AND ("posthog_person"."properties" -> 'bla') = '1'::jsonb
           AND "posthog_person"."properties" ? 'bla'
           AND NOT (("posthog_person"."properties" -> 'bla') = 'null'::jsonb)
           AND ((("posthog_person"."properties" -> 'bla') = '1'::jsonb
                 AND "posthog_person"."properties" ? 'bla'
                 AND NOT (("posthog_person"."properties" -> 'bla') = 'null'::jsonb))
                OR (("posthog_person"."properties" -> 'bla') = '2'::jsonb
                    AND "posthog_person"."properties" ? 'bla'
                    AND NOT (("posthog_person"."properties" -> 'bla') = 'null'::jsonb))))
          OR (("posthog_person"."properties" -> 'bla') = '3'::jsonb
              AND "posthog_person"."properties" ? 'bla'
              AND NOT (("posthog_person"."properties" -> 'bla') = 'null'::jsonb)))
         AND "posthog_person"."team_id" = 2)
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts.2
  '''
  SELECT "posthog_persondistinctid"."distinct_id"
  FROM "posthog_persondistinctid"
  WHERE ("posthog_persondistinctid"."person_id" = 2
         AND "posthog_persondistinctid"."team_id" = 2)
  ORDER BY "posthog_persondistinctid"."id" ASC
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts.3
  '''
  SELECT "posthog_persondistinctid"."distinct_id"
  FROM "posthog_persondistinctid"
  WHERE ("posthog_persondistinctid"."person_id" = 2
         AND "posthog_persondistinctid"."team_id" = 2)
  ORDER BY "posthog_persondistinctid"."id" ASC
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts_no_match
  '''
  SELECT "posthog_cohort"."id",
         "posthog_cohort"."name",
         "posthog_cohort"."description",
         "posthog_cohort"."team_id",
         "posthog_cohort"."deleted",
         "posthog_cohort"."filters",
         "posthog_cohort"."query",
         "posthog_cohort"."version",
         "posthog_cohort"."pending_version",
         "posthog_cohort"."count",
         "posthog_cohort"."created_by_id",
         "posthog_cohort"."created_at",
         "posthog_cohort"."is_calculating",
         "posthog_cohort"."last_calculation",
         "posthog_cohort"."errors_calculating",
         "posthog_cohort"."is_static",
         "posthog_cohort"."groups"
  FROM "posthog_cohort"
  WHERE (NOT "posthog_cohort"."deleted"
         AND "posthog_cohort"."id" = 2
         AND "posthog_cohort"."team_id" = 2)
  ORDER BY "posthog_cohort"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts_no_match.1
  '''
  SELECT "posthog_person"."id",
         "posthog_person"."created_at",
         "posthog_person"."properties_last_updated_at",
         "posthog_person"."properties_last_operation",
         "posthog_person"."team_id",
         "posthog_person"."properties",
         "posthog_person"."is_user_id",
         "posthog_person"."is_identified",
         "posthog_person"."uuid",
         "posthog_person"."version"
  FROM "posthog_person"
  WHERE (((("posthog_person"."properties" -> 'url') = '"https://whatever.com"'::jsonb
           AND "posthog_person"."properties" ? 'url'
           AND NOT (("posthog_person"."properties" -> 'url') = 'null'::jsonb)
           AND ("posthog_person"."properties" -> 'bla') = '1'::jsonb
           AND "posthog_person"."properties" ? 'bla'
           AND NOT (("posthog_person"."properties" -> 'bla') = 'null'::jsonb)
           AND ("posthog_person"."properties" -> 'bla') = '1'::jsonb
           AND "posthog_person"."properties" ? 'bla'
           AND NOT (("posthog_person"."properties" -> 'bla') = 'null'::jsonb)
           AND ("posthog_person"."properties" -> 'bla') = '2'::jsonb
           AND "posthog_person"."properties" ? 'bla'
           AND NOT (("posthog_person"."properties" -> 'bla') = 'null'::jsonb))
          OR (("posthog_person"."properties" -> 'bla') = '3'::jsonb
              AND "posthog_person"."properties" ? 'bla'
              AND NOT (("posthog_person"."properties" -> 'bla') = 'null'::jsonb)))
         AND "posthog_person"."team_id" = 2)
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts_no_match.2
  '''
  SELECT "posthog_persondistinctid"."distinct_id"
  FROM "posthog_persondistinctid"
  WHERE ("posthog_persondistinctid"."person_id" = 2
         AND "posthog_persondistinctid"."team_id" = 2)
  ORDER BY "posthog_persondistinctid"."id" ASC
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts
  '''
  SELECT "posthog_cohort"."id",
         "posthog_cohort"."name",
         "posthog_cohort"."description",
         "posthog_cohort"."team_id",
         "posthog_cohort"."deleted",
         "posthog_cohort"."filters",
         "posthog_cohort"."query",
         "posthog_cohort"."version",
         "posthog_cohort"."pending_version",
         "posthog_cohort"."count",
         "posthog_cohort"."created_by_id",
         "posthog_cohort"."created_at",
         "posthog_cohort"."is_calculating",
         "posthog_cohort"."last_calculation",
         "posthog_cohort"."errors_calculating",
         "posthog_cohort"."is_static",
         "posthog_cohort"."groups"
  FROM "posthog_cohort"
  WHERE (NOT "posthog_cohort"."deleted"
         AND "posthog_cohort"."id" = 2
         AND "posthog_cohort"."team_id" = 2)
  ORDER BY "posthog_cohort"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.1
  '''
  SELECT "posthog_cohort"."id",
         "posthog_cohort"."name",
         "posthog_cohort"."description",
         "posthog_cohort"."team_id",
         "posthog_cohort"."deleted",
         "posthog_cohort"."filters",
         "posthog_cohort"."query",
         "posthog_cohort"."version",
         "posthog_cohort"."pending_version",
         "posthog_cohort"."count",
         "posthog_cohort"."created_by_id",
         "posthog_cohort"."created_at",
         "posthog_cohort"."is_calculating",
         "posthog_cohort"."last_calculation",
         "posthog_cohort"."errors_calculating",
         "posthog_cohort"."is_static",
         "posthog_cohort"."groups"
  FROM "posthog_cohort"
  WHERE (NOT "posthog_cohort"."deleted"
         AND "posthog_cohort"."id" = 2
         AND "posthog_cohort"."team_id" = 2)
  ORDER BY "posthog_cohort"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.2
  '''
  SELECT "posthog_cohort"."id",
         "posthog_cohort"."name",
         "posthog_cohort"."description",
         "posthog_cohort"."team_id",
         "posthog_cohort"."deleted",
         "posthog_cohort"."filters",
         "posthog_cohort"."query",
         "posthog_cohort"."version",
         "posthog_cohort"."pending_version",
         "posthog_cohort"."count",
         "posthog_cohort"."created_by_id",
         "posthog_cohort"."created_at",
         "posthog_cohort"."is_calculating",
         "posthog_cohort"."last_calculation",
         "posthog_cohort"."errors_calculating",
         "posthog_cohort"."is_static",
         "posthog_cohort"."groups"
  FROM "posthog_cohort"
  WHERE (NOT "posthog_cohort"."deleted"
         AND "posthog_cohort"."id" = 2
         AND "posthog_cohort"."team_id" = 2)
  ORDER BY "posthog_cohort"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.3
  '''
  SELECT "posthog_cohort"."id",
         "posthog_cohort"."name",
         "posthog_cohort"."description",
         "posthog_cohort"."team_id",
         "posthog_cohort"."deleted",
         "posthog_cohort"."filters",
         "posthog_cohort"."query",
         "posthog_cohort"."version",
         "posthog_cohort"."pending_version",
         "posthog_cohort"."count",
         "posthog_cohort"."created_by_id",
         "posthog_cohort"."created_at",
         "posthog_cohort"."is_calculating",
         "posthog_cohort"."last_calculation",
         "posthog_cohort"."errors_calculating",
         "posthog_cohort"."is_static",
         "posthog_cohort"."groups"
  FROM "posthog_cohort"
  WHERE (NOT "posthog_cohort"."deleted"
         AND "posthog_cohort"."id" = 2
         AND "posthog_cohort"."team_id" = 2)
  ORDER BY "posthog_cohort"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.4
  '''
  SELECT "posthog_person"."id",
         "posthog_person"."created_at",
         "posthog_person"."properties_last_updated_at",
         "posthog_person"."properties_last_operation",
         "posthog_person"."team_id",
         "posthog_person"."properties",
         "posthog_person"."is_user_id",
         "posthog_person"."is_identified",
         "posthog_person"."uuid",
         "posthog_person"."version"
  FROM "posthog_person"
  WHERE (NOT ((("posthog_person"."properties" -> 'bla') = '1'::jsonb
               AND "posthog_person"."properties" ? 'bla'
               AND NOT (("posthog_person"."properties" -> 'bla') = 'null'::jsonb))
              OR (("posthog_person"."properties" -> 'bla') = '2'::jsonb
                  AND "posthog_person"."properties" ? 'bla'
                  AND NOT (("posthog_person"."properties" -> 'bla') = 'null'::jsonb)))
         AND NOT ((("posthog_person"."properties" -> 'bla') = '3'::jsonb
                   AND "posthog_person"."properties" ? 'bla'
                   AND NOT (("posthog_person"."properties" -> 'bla') = 'null'::jsonb))
                  OR (("posthog_person"."properties" -> 'bla') = '4'::jsonb
                      AND "posthog_person"."properties" ? 'bla'
                      AND NOT (("posthog_person"."properties" -> 'bla') = 'null'::jsonb)))
         AND ("posthog_person"."properties" -> 'other') = '1'::jsonb
         AND "posthog_person"."properties" ? 'other'
         AND NOT (("posthog_person"."properties" -> 'other') = 'null'::jsonb)
         AND "posthog_person"."team_id" = 2)
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.5
  '''
  SELECT "posthog_persondistinctid"."distinct_id"
  FROM "posthog_persondistinctid"
  WHERE ("posthog_persondistinctid"."person_id" = 2
         AND "posthog_persondistinctid"."team_id" = 2)
  ORDER BY "posthog_persondistinctid"."id" ASC
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.6
  '''
  SELECT "posthog_persondistinctid"."distinct_id"
  FROM "posthog_persondistinctid"
  WHERE ("posthog_persondistinctid"."person_id" = 2
         AND "posthog_persondistinctid"."team_id" = 2)
  ORDER BY "posthog_persondistinctid"."id" ASC
  '''
# ---
